# sample-agent-rca-smartmanuf

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  NOTICE  README.md  pyproject.toml
agentcore/: agentcore.json  aws-targets.json
app/RCAAgent/: Dockerfile  main.py  pyproject.toml
app/RCAAgent/agents/: step1_agent.py  step2_agent.py  step3_agent.py
app/RCAAgent/graph/: interrupt_hook.py  investigation_graph.py
app/RCAAgent/prompts/: __init__.py  sop_loader.py
app/RCAAgent/sops/: step1-problem-definition.sop.md  step2-root-cause-analysis.sop.md  step3-verification.sop.md
app/RCAAgent/state/: investigation_state.py
app/RCAAgent/tools/: __init__.py  kb_logging.py
cli/: __init__.py  deploy.py
data/batch_records/: material_consumption_2023.csv  material_consumption_2025.csv  nexus_b2m_lot_summary_2025.csv  nexus_ckmb_lot_summary_2023.csv
data/capa/: capa_cartridge_coating_variation.txt  capa_spr_coating_variation.txt
data/change_control/: cr_2023_0087_cartridge_lot_qualification.txt  cr_2023_0087_spr_lot_qualification.txt  cr_2025_0045_assembly_sop_update.txt
data/deviation_reports/: ncr_2023_0100_primary_oos_batch_1009900940.txt  ncr_2023_0100_s1_oos_batch_1009900940.txt  ncr_2023_0101_primary_oos_batch_1009900941.txt  ncr_2023_0101_s1_oos_batch_1009900941.txt  ncr_2025_0050_wrong_cartridges_batch_1011174640.txt  ncr_2025_0050_wrong_cones_batch_1011174640.txt
data/equipment_logs/: assembly_line_changeover_2025.csv  calibration_station_usage_2023.csv
data/maintenance/: stop_2025_0030_short_changeover.txt  (+2 more)
docs/: investigation-pipeline.md
infra/: app.py  cdk.json  pyproject.toml
infra/stacks/: __init__.py  kb_stack.py
scripts/: invoke_agent.py  setup_domain.sh
tests/: test_interrupt_hook.py  test_main.py  test_sop_loader.py
(+23 files in other folders)
