[project]
name = "rca-kb-infra"
version = "0.1.0"
description = "CDK infrastructure for Bedrock Knowledge Bases (Hybrid + GraphRAG)"
requires-python = ">=3.10"
license = { text = "MIT-0" }

dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0,<11.0.0",
    "cdklabs.generative-ai-cdk-constructs>=0.1.310,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stacks"]
