[project]
name = "manufacturing-rca-agent"
version = "0.1.0"
description = "AI-powered root cause analysis agent for manufacturing quality investigations"
requires-python = ">=3.12"
license = { text = "MIT-0" }

dependencies = [
    "strands-agents>=1.37,<2.0",
    "strands-agents-tools>=0.2,<1.0",
    "bedrock-agentcore>=1.0.3,<2.0",
    "boto3>=1.42,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
